# HyTS-GLB

./: CMakeLists.txt  README.md
output/: Cost_ratio1to1.txt  Cost_ratio1to2.txt  Cost_ratio1to3.txt  Cost_ratio1to4.txt  Cost_ratio1to5.txt  Cost_ratio2to1.txt  Cost_ratio3to1.txt  Cost_ratio4to1.txt  Cost_ratio5to1.txt  HyTS_GLB_2_5_3_0.05.txt  HyTS_GLB_3_5_4_0.05.txt  HyTS_GLB_4_5_5_0.05.txt  HyTS_GLB_5_5_6_0.05.txt  RAGEGLM_NoDuel_2_5_3_0.05.txt  RAGEGLM_NoDuel_3_5_4_0.05.txt  RAGEGLM_NoDuel_4_5_5_0.05.txt  RAGEGLM_NoDuel_5_5_6_0.05.txt  Random_WithDuel_2_5_3_0.05.txt  Random_WithDuel_3_5_4_0.05.txt  Random_WithDuel_4_5_5_0.05.txt  Random_WithDuel_5_5_6_0.05.txt  ReTS_GLB_2_5_3_0.05.txt  ReTS_GLB_3_5_4_0.05.txt  ReTS_GLB_4_5_5_0.05.txt  ReTS_GLB_5_5_6_0.05.txt  glgape_result.txt  hybrid_result.txt
src/: baseline_glgape.h  baseline_rageglm.h  cholesky.h  env.h  glm_logistic.h  hybrid_bai.h  instance.h  lin_alg.h  main.cpp  mle.h  rng.h
